tests/models/enum/unnamed/f32/fail/min_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_items = 2)]
        f32
    ),
}
fn main() {}
